# bank-management-project

./: .gitignore  README.md
bank-management-project/: CMakeLists.txt  README.md
bank-management-project/src/: project2.cpp
